<resources>
    <string name="app_name">SEA Catering</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_page_one">Welcome to SEA Catering!</string>
    <string name="title_page_two">Explore Our Menus</string>
    <string name="title_page_third">Easy Subscription and delivery</string>
    <string name="sub_page_one">Healthy Meals, Anytime, Anywhere</string>
    <string name="sub_page_two">customizable healthy meal service with delivery all across Indonesia</string>
    <string name="sub_page_third">Choose your favorite plan and enjoy convenient meal delivery with customizable options, comprehensive nutritional details, and service to major cities.</string>
    <string name="default_web_client_id">988938722625-rfdk8p6ah0lqh5kjdma3i811l7ict7ec.apps.googleusercontent.com</string>
    <string name="profile_image">Profile Image</string>
    <string name="textSkipOnboarding1">Skip</string>
    <string name="textSkipOnboarding2">Skip</string>
    <string name="textSkipOnboarding3">Next</string>
    <string name="textWelcomeLogin">Welcome Back</string>
    <string name="textSubtitleLogin">Sign in to continue to your account</string>
    <string name="labelEmailLogin">Email Address</string>
    <string name="inputEmailLogin">example@gmail.com</string>
    <string name="labelPasswordLogin">Password</string>
    <string name="buttonGoogleSignIn">Sign in with Google</string>
    <string name="inputPasswordLogin">Your password</string>
    <string name="textRegisterLogin">Register Here!</string>
    <string name="buttonLogin">Log In</string>
    <string name="textTitleRegister">Create Your Account</string>
    <string name="textSubtitleRegister">Sign up to access your personalized experience</string>
    <string name="labelEmailRegister">Email Address</string>
    <string name="inputEmailRegister">example@gmail.com</string>
    <string name="labelNameRegister">Full Name</string>
    <string name="inputNameRegister">Raditya Aryabudhi Ramadhan</string>
    <string name="labelPasswordRegister">Create Password</string>
    <string name="inputPasswordRegister">Make sure your password is strong</string>
    <string name="labelConfirmPasswordRegister">Confirm Password</string>
    <string name="inputConfirmPasswordRegister">Confirm password</string>
    <string name="textNoteRegister">Back to login!</string>
    <string name="buttonGoogleSignUpRegister">Sign up with Google</string>
    <string name="buttonSignUpRegister">Create Account</string>
    <string name="tvAdminDashboardTitle">Admin Dashboard</string>
    <string name="tvDateRangeLabelAdmin">Select Date Range:</string>
    <string name="tvSelectedDateRange">Current Month</string>
    <string name="btnSelectDateRange">Change</string>
    <string name="tvNewSubscriptionsCountAdmin">New Subscriptions</string>
    <string name="tvMRRAdmin">Monthly Recurring Revenue</string>
    <string name="tvCanceledSubscriptionsCountAdmin">Canceled Subscriptions</string>
    <string name="tvSubscriptionGrowthCountAdmin">Active Subscriptions</string>
    <string name="textViewDashboardTitle">My Subscriptions</string>
    <string name="tvNoSubscriptions">No active subscriptions found.</string>
    <string name="textViewLocationLabelHome">Location</string>
    <string name="textViewLocationStatusHome">Please turn on your location</string>
    <string name="textViewRecommendedTitleHome">Recommended for you!</string>
    <string name="recommended_image_1">Recommended image 1</string>
    <string name="healthy_package_home">Healthy Package</string>
    <string name="recommended_image_2">Recommended image 2</string>
    <string name="vegan_package">Vegan Package</string>
    <string name="recommended_image_3">Recommended image 3</string>
    <string name="muscle_package">Muscle Package</string>
    <string name="textViewOffersTitleHome">What we offers?</string>
    <string name="fast_delivery">Fast Delivery</string>
    <string name="fast_delivery_tv">Fast Delivery</string>
    <string name="healthy_food">Healthy Food</string>
    <string name="healthy_food_tv">Healthy Food</string>
    <string name="fresh_ingredients">Fresh Ingredients</string>
    <string name="fresh_ingredients_tv">Fresh Ingredients</string>
    <string name="what_others_thinking_about_us">What others thinking about us?</string>
    <string name="balanced_nmeal_plan">BALANCED\nMEAL PLAN</string>
    <string name="a_reduced_calorie_meal_plan_with_nmaximised_nutrition">A reduced calorie meal plan with\nmaximised nutrition</string>
    <string name="your_plan">Your Plan</string>
    <string name="see_details">See Details</string>
    <string name="popular_meal_in_this_plan">Popular meal in this plan</string>
    <string name="every_dish_is_designed_by_our_nutritionists_to_ensure_you_get_balanced_nutrition_without_sacrificing_delicious_taste">Every dish is designed by our nutritionists to ensure you get balanced nutrition without sacrificing delicious taste.</string>
    <string name="proceed_to_subscribe">Proceed to Subscribe</string>
    <string name="bio_data">Bio-data</string>
    <string name="raditya_aryabudhi_ramadhan">Raditya Aryabudhi Ramadhan</string>
    <string name="radityaramadhan_138_gmail_com">radityaramadhan.138@gmail.com</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="nohp">NoHp</string>
    <string name="address">Address</string>
    <string name="addresssat">Saved Location</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update_profile">Update Profile</string>
    <string name="logout">LogOut</string>
    <string name="subscription">Subscription</string>
    <string name="full_name_subs">Full Name</string>
    <string name="ex_raditya_aryabudhi_ramadhan">Ex: Raditya Aryabudhi Ramadhan</string>
    <string name="phone_number">Phone Number</string>
    <string name="ex_6282121243">Ex: 08282121243</string>
    <string name="plan_selection">Plan Selection</string>
    <string name="meal_type">Meal Type</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="delivery_day">Delivery Day</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="allergies">Allergies</string>
    <string name="list_any_allergies_or_dietary_restrictions">List any allergies or dietary restrictions</string>
    <string name="rp_0">Rp 0</string>
    <string name="note_all_fields_are_required_and_must_be_filled_in_before_submitting_the_form">Note: All fields are required and must be filled in before submitting the form</string>
    <string name="proceed_to_payment">Payment with Google Play</string>
    <string name="add_your_testimonial">Add Your Testimonial</string>
    <string name="customer_name">Customer Name</string>
    <string name="your_name">Your Name</string>
    <string name="your_review">Your Review</string>
    <string name="share_your_experience_using_the_app">Share your experience using the app...</string>
    <string name="rating">Rating</string>
    <string name="submit_testimonial">Submit Testimonial</string>
    <string name="cancel">Cancel</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="healthy_meal_packages">Healthy Meal Packages</string>
    <string name="rp120_000">Rp120,000</string>
    <string name="what_s_include">What\'s Include:</string>
    <string name="steaks_and_eggs">Steaks and Eggs</string>
    <string name="fresh">Fresh</string>
    <string name="by_kebabia_grill">By Kebabia Grill</string>
    <string name="_461_kcal_40_c_26_p_24_f">461 kcal 40 C 26 P 24 F</string>
    <string name="sample_detail">• Sample detail</string>
    <string name="home">Home</string>
    <string name="meal_plans">Meal Plans</string>
    <string name="subscription_tv">Subscription</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="app_version_0_1">App Version 0.3</string>


</resources>