<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.auth.login.LoginFragment">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logoapp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textWelcomeLogin"
        android:layout_marginTop="20dp"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/blueDark"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textSubtitleLogin"
        android:textAlignment="center"
        android:textStyle="normal"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/blueDark"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelEmailLogin"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="2dp"
        android:textSize="14sp"
        android:layout_marginTop="32dp"
        android:textColor="@color/blueDark"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       app:hintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/inputEmailLogin"
            android:background="@drawable/rounded_edittext_background" android:padding="12dp"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelPasswordLogin"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="2dp"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/blueDark"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/inputPasswordLogin"
            android:background="@drawable/rounded_edittext_background" android:padding="12dp"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textRegisterLogin"
        android:textStyle="italic"
        android:textColor="@color/blueDark"
        android:textSize="13sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="2dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/googleButtonSignIn"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonGoogleSignIn"
        android:textColor="@color/blueDark"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        app:icon = "@drawable/google"
        app:iconTint="@null"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:backgroundTint="@color/white"
        app:cornerRadius="24dp"
        app:strokeColor="@color/blueDark"
        app:strokeWidth="1dp"/>

    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/buttonLogin"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/blueDark"/>




</LinearLayout>