<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.register.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/logoapp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textTitleRegister"
            android:layout_marginTop="20dp"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="@color/blueDark"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textSubtitleRegister"
            android:textAlignment="center"
            android:textStyle="normal"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/blueDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelEmailRegister"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="2dp"
            android:textSize="14sp"
            android:layout_marginTop="32dp"
            android:textColor="@color/blueDark"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputEmailRegister"
                android:background="@drawable/rounded_edittext_background"
                android:padding="12dp"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelNameRegister"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="2dp"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/blueDark"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:hintEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputNameRegister"
                android:background="@drawable/rounded_edittext_background"
                android:padding="12dp"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelPasswordRegister"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="2dp"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/blueDark"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:hint="@string/inputPasswordRegister"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext_background"
                android:padding="12dp"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelConfirmPasswordRegister"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="2dp"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/blueDark"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:hintEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputConfirmPasswordRegister"
                android:background="@drawable/rounded_edittext_background"
                android:padding="12dp"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textNoteRegister"
            android:textStyle="italic"
            android:textColor="@color/blueDark"
            android:textSize="13sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="2dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleButtonSignUp"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonGoogleSignUpRegister"
            android:textColor="@color/blueDark"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            app:icon="@drawable/google"
            app:iconTint="@null"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:backgroundTint="@color/white"
            app:cornerRadius="24dp"
            app:strokeColor="@color/blueDark"
            app:strokeWidth="1dp"/>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/buttonSignUpRegister"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:backgroundTint="@color/blueDark"/>
    </LinearLayout>
</ScrollView>
