<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.testimonial.AddTestimonialFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/add_your_testimonial"
            android:textColor="@color/blueDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:src="@drawable/baseline_x_button_24"
            app:layout_constraintBottom_toBottomOf="@+id/textViewTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewTitle"
            app:layout_constraintTop_toTopOf="@+id/textViewTitle" />
        <View
            android:id="@+id/viewLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintTop_toBottomOf="@id/viewLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_name"
                android:layout_marginBottom="8dp"
                android:textColor="@color/blueDark"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputCustomerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_name"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:enabled="false"/> </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_review"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/blueDark"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/share_your_experience_using_the_app">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="4"
                    android:gravity="top"
                    android:padding="12dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/blueDark"
                android:textSize="14sp" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1.0"
                android:rating="5"
                android:theme="@style/CustomRatingBar"
                android:isIndicator="false"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitTestimonialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/submit_testimonial"
                android:textSize="16sp"
                android:paddingVertical="12dp"
                android:backgroundTint="@color/green"
                app:cornerRadius="5dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>