<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="8dp"
    android:backgroundTint="@color/whiteOne"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="12dp"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/ivFoodImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:background="@color/gray"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvFoodName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steaks_and_eggs"
                android:textColor="@color/blueDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:backgroundTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="20dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvFreshTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fresh"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    />

            </androidx.cardview.widget.CardView>



            <TextView
                android:id="@+id/tvRestaurantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/by_kebabia_grill"
                android:textColor="@color/blueDark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvNutritionInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_461_kcal_40_c_26_p_24_f"
                android:textColor="@color/blueDark"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>